--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ quarkus.dev.frontend.host=0.0.0.0
 quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=root
 quarkus.datasource.password=123456
-quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/docdb?useSSL=false&allowPublicKeyRetrieval=true
+quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/docdbv2?useSSL=false&allowPublicKeyRetrieval=true
 quarkus.datasource.jdbc.max-size=8
 quarkus.datasource.jdbc.min-size=2
 quarkus.hibernate-orm.database.generation=none
