migrate to postgres db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,22 @@ quarkus.http.host=0.0.0.0
 # Allow Dev UI to be accessed from remote devices
 quarkus.dev.frontend.host=0.0.0.0
 
-quarkus.datasource.db-kind=mysql
-quarkus.datasource.username=root
+#quarkus.datasource.db-kind=mysql
+#quarkus.datasource.username=root
+#quarkus.datasource.password=123456
+#quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/docdbv2?useSSL=false&allowPublicKeyRetrieval=true
+#quarkus.datasource.jdbc.max-size=8
+#quarkus.datasource.jdbc.min-size=2
+#quarkus.hibernate-orm.database.generation=none
+
+
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=postgres
 quarkus.datasource.password=123456
-quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/docdbv2?useSSL=false&allowPublicKeyRetrieval=true
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/vbhcdb
 quarkus.datasource.jdbc.max-size=8
 quarkus.datasource.jdbc.min-size=2
 quarkus.hibernate-orm.database.generation=none
-
 # Enable JWT
 #/Users/rickdal/Documents/htttPT/login-service/src/main/resources/META-INF/resources
 #/Users/rickdal/Documents/htttPT/login-service/src/main/resources/publickey.pem
